# python-mcp-server

./: .cursorrules  .env.example  README.md  main.py  pyproject.toml  test_cases.json  test_server.py
mcp_server/: handlers.py  server.py  tools.json
